--- a/src/css/style2.css
+++ b/src/css/style2.css
@@ -10,16 +10,10 @@
 }
 
 
-.texto-extra{
+.texto-extra {
   display: none;
-  position: relative;
-  font-size: 1.5em;
-text-align: center;
-  margin-right:-50px ;
-  margin-top: 180px;
- padding: 3% 4%;
-line-height: 1.5em;
-color: #fffefe;
+  color: #fffefe;
+ 
 }
 
 
@@ -313,7 +307,7 @@ e {
 }
 
 /* Telas de celular */
-@media screen and (min-width:480px){
+@media screen and (min-width:480px) {
 
   /* Nada para mudar  */
 
@@ -337,11 +331,11 @@ e {
     border-radius: 60px;
     margin-top: 90px;
   }
-  
+
   /* Main -Mapa */
-  
-  
-  
+
+
+
   #map {
     margin-top: 20px;
     padding: 3% 4%;
@@ -353,9 +347,9 @@ e {
     border-radius: 10vh;
     position: relative;
     z-index: 0;
-   
+
   }
-  
+
   #inputUsuario {
     display: none;
     position: absolute;
@@ -366,8 +360,8 @@ e {
     z-index: 1000;
     /* Valor alto para garantir que fique na frente */
     color: #ffffff;
-   float: left;
-   margin-top: 60px;
+    float: left;
+    margin-top: 60px;
   }
 
 
@@ -388,8 +382,8 @@ e {
     margin-left: 2%;
     border-radius: 20px;
   }
-  
-  
+
+
   .postagem p {
     float: left;
     margin-top: 10px;
@@ -410,14 +404,14 @@ e {
 }
 
 /* Tabletes e Desktop */
-@media screen and (min-width: 960px){
+@media screen and (min-width: 960px) {
 
-  
+
 
   .btn-menu {
     display: none;
   }
-  
+
   .menu {
     width: auto;
     height: 100px;
@@ -427,90 +421,91 @@ e {
     position: static;
     background-image: none;
     border: none;
-    margin-left:50px ;
+    margin-left: 50px;
     margin-top: 10px;
   }
-  
-  
+
+
   .menu.show {
     display: none;
-  
-  
+
+
   }
-  
-  
+
+
   .btn-close {
     display: none;
   }
-  
+
   .menu li {
-  padding: 0;
-  float: left;
-  
+    padding: 0;
+    float: left;
+
   }
-  
+
   .menu li a {
-   color: white;
-  font-weight: 300;
-  padding: 15px;
- 
+    color: white;
+    font-weight: 300;
+    padding: 15px;
+
   }
-  
+
   .menu li a:hover {
     color: white;
     font-weight: 300;
     padding: 15px;
-    
+
 
   }
-  
+
 
   .banner {
     margin-top: 40px;
 
   }
-   
-  
-.texto-map p {
-  margin-top: 40px;
-  font-size: 1.8em;
-  
-
-}
-.texto-map p:nth-child(2) {
-  margin-top: 10px;
-  font-size: 1.8em;
-  
-
-}
 
 
-.botao-mapa{
-  width: 200px;
-  height: 80px;
-  border-radius: none;
-  margin-top: 20px;
-  margin-left: 80px;
-}
+  .texto-map p {
+    margin-top: 40px;
+    font-size: 1.8em;
 
-.botao-mapa p{
-  text-align: center;
-  font-size: 1.5em;
-  font-weight: 300;
-  margin-top: -25px;
-}
 
-#map {
-  
-  margin-bottom: 40px;
- 
-}
+  }
 
-.postagem p {
-  margin-top: 60px;
-  font-size: 1.8em;
- 
-}
+  .texto-map p:nth-child(2) {
+    margin-top: 10px;
+    font-size: 1.8em;
+
+
+  }
+
+
+  .botao-mapa {
+    width: 200px;
+    height: 80px;
+    border-radius: none;
+    margin-top: 20px;
+    margin-left: 80px;
+  }
+
+  .botao-mapa p {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 300;
+    margin-top: -25px;
+  }
+
+  #map {
+
+    margin-bottom: 40px;
+
+  }
+
+  .postagem p {
+    margin-top: 60px;
+    font-size: 1.8em;
+
+  }
 
 
 }
@@ -529,138 +524,145 @@ e {
 
 /* Tela Cheia */
 
-@media screen and (min-width: 1280px){
-
- 
-/* CABEÇALHO */
-
-.cabecalho {
-  width: 100%;
-  background-color: #260801;
-  height: 120px;
-}
-
-fieldset {
-
-  border: solid rgb(241, 233, 233) 2px;
-
-}
+@media screen and (min-width: 1280px) {
 
 
-/* Alteração no comportamento do menu */
+  /* CABEÇALHO */
 
-.menu {
-  overflow: hidden;
-  width: 100%;
-  height: 100px;
-  position: absolute;
-  top: 0;
-  left: 200px;
-  display: none;
-  border:none;
+  .cabecalho {
+    width: 100%;
+    background-color: #260801;
+    height: 120px;
+  }
 
+  fieldset {
 
-}
-.menu ul {
-width: 100%;
+    border: solid rgb(241, 233, 233) 2px;
 
- 
-}
-
-.menu li {
-margin-top: 20px;
-justify-content: space-between;
-
-}
-
-.menu li a {
-margin-left: 60px;
-font-size: 1em;
-font-weight: 700px;
-}
-
-.menu li a:hover {
-  margin-left: 60px;
-  font-size: 1em;
-  font-weight: 700px;
-  border: none;
-
-}
+  }
 
 
-/* ----------------------------------------------------------------------- */
+  /* Alteração no comportamento do menu */
+
+  .menu {
+    overflow: hidden;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 200px;
+    display: none;
+    border: none;
 
 
-/* Alterarações no foooter */
-.footer-contatos {
-  margin-top: 20px;
-  background-color: #260801;
-  width: 100%;
-  float: left;
-  padding: 1% 1%;
-  text-align: center;
-  border: none;
-  
-}
+  }
+
+  .menu ul {
+    width: 100%;
 
 
-/* -------------------------------- */
+  }
+
+  .menu li {
+    margin-top: 20px;
+    justify-content: space-between;
+
+  }
+
+  .menu li a {
+    margin-left: 60px;
+    font-size: 1em;
+    font-weight: 700px;
+  }
+
+  .menu li a:hover {
+    margin-left: 60px;
+    font-size: 1em;
+    font-weight: 700px;
+    border: none;
+
+  }
 
 
-.banner {
- width: 60%;
-height: 468px;
-border: none;
--webkit-mask-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1));
-  mask-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1));
-  margin-bottom: 30px;
-}
- 
-.banner h1{
-  font-size: 3em;
-  text-shadow: 2px 2px red;
-  font-family: 'Times New Roman', Times, serif;
-}
-.texto-map p {
-width: 20%;
-font-size: 1.5em;
-z-index: 0;
-margin-top: 80px;
-line-height: 1.3em;
-}
-.texto-map p:nth-child(2) {
-margin-top: 10px;
-font-size: 1.5em;
+  /* ----------------------------------------------------------------------- */
 
 
-}
+  /* Alterarações no foooter */
+  .footer-contatos {
+    margin-top: 20px;
+    background-color: #260801;
+    width: 100%;
+    float: left;
+    padding: 1% 1%;
+    text-align: center;
+    border: none;
 
-#map {
-
-width: 60%;
-height: 468px;
-margin-left: 20px;
-}
-
-
-.texto-extra{
-  display: block;
-
-}
+  }
 
 
+  /* -------------------------------- */
 
-.postagem img {
-  width: 60%;
-  height: 468px;
-  opacity: 1;
-  float: left;
 
-}
+  .banner {
+    width: 60%;
+    height: 468px;
+    border: none;
+    -webkit-mask-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1));
+    mask-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1));
+    margin-bottom: 30px;
+  }
 
-.postagem p {
-width: 30%;
+  .banner h1 {
+    font-size: 3em;
+    text-shadow: 2px 2px red;
+    font-family: 'Times New Roman', Times, serif;
+  }
 
-}
+  .texto-map p {
+    width: 20%;
+    font-size: 1.5em;
+    z-index: 0;
+    margin-top: 80px;
+    line-height: 1.3em;
+  }
+
+  .texto-map p:nth-child(2) {
+    margin-top: 10px;
+    font-size: 1.5em;
+
+
+  }
+
+  #map {
+    display: flex;
+    width: 60%;
+    height: 468px;
+    margin-left: 20px;
+  }
+
+
+  .texto-extra {
+    display: flex;
+    width: 30%;
+    padding: 3% 4%;
+    margin-top: 120px;
+    line-height: 1.5em;
+    font-size: 1.5em;
+  }
+
+
+
+  .postagem img {
+    width: 60%;
+    height: 468px;
+    opacity: 1;
+    float: left;
+
+  }
+
+  .postagem p {
+    width: 30%;
+
+  }
 
 }
